tests/fixtures/positive/empty-blocks/EmptyTryBlock.kt
package fixtures.positive.emptyblocks

fun attempt() {
    try { } catch (e: Exception) {
        log(e)
    }
}
