tests/fixtures/negative/empty-blocks/EmptyTryBlock.kt
package fixtures.negative.emptyblocks

fun attempt() {
    try {
        riskyOp()
    } catch (e: Exception) {
        log(e)
    }
}
